Add allSamplesCount to Summary Proj and simulate Pagination at controller